# claude-agent-squad

./: .flake8  .gitignore  .pre-commit-config.yaml  AWSLABS_INTEGRATION_GUIDE.md  CONTRIBUTING.md  Dockerfile  FINAL_INTEGRATION_SUMMARY.md  JUMP_CODES_STATUS.md  JUMP_CODES_VS_MCP_TOOLS.md  MCP_CONNECTION_GUIDE.md  README.md  UNIFIED_JUMP_CODES_GUIDE.md  enhanced_api.py  pyproject.toml  pytest.ini  setup_awslabs.py  start_jump_codes.sh
.github/workflows/: ci.yml
claude-agent-squad-knowledge/: 00_project_overview.md
claude-agent-squad-knowledge/05_jump_codes/: implementation_guide.md  jump_code_registry.md
mcp_bridge/: README.md  live_mcp_demo.py  mcp_integration.py  mcp_integration.py.backup  requirements.txt  test_integration.py
python_agent_squad/: .env.example  IMPLEMENTATION_COMPLETE.md  JUMP_CODES_README.md  advanced_jump_codes.py  agent_squad_jump_integration.py  awslabs_integration.py  demo_jump_codes.py  enhanced_jump_codes.py  example_usage.py  generator.py  jump_code_cli.py  jump_codes.py  jump_codes_config.yaml  main.py  requirements-awslabs.txt  requirements.txt  test_agent_creation.py  test_complete_integration.py  test_jump_codes.py
python_agent_squad/tests/: __init__.py  conftest.py
